feat: added perf index file for demo

--- a/index_perf.html
+++ b/index_perf.html
@@ -27,17 +27,9 @@
   </head>
   <body>
     <div class="column">
-      <h2>Dirty Version</h2>
-      <div id="products-dirty"></div>
-    </div>
-    <div class="column">
-      <h2>Clean Version</h2>
-      <div id="products-clean"></div>
-    </div>
-    <div class="column">
       <h2>Performant Version</h2>
       <div id="products-performant"></div>
     </div>
-    <script src="app.js"></script>
+    <script src="app_perf.js"></script>
   </body>
 </html>
